// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> matches snapshot with default props 1`] = `
<div
  className="Flex rowGap4 itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with dot indicators 1`] = `
<div
  className="Flex rowGap4 itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  News
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box brand circle"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  You
                </div>
              </div>
              <div
                className="FlexItem"
              >
                <div
                  className="box brand circle"
                  style={
                    Object {
                      "height": 6,
                      "marginTop": "1px",
                      "width": 6,
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with wrap 1`] = `
<div
  className="Flex rowGap4 flexWrap itemsCenter xsDirectionRow"
>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        aria-current="page"
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  News
                </div>
              </div>
            </div>
            <div
              className="absolute box"
              style={
                Object {
                  "bottom": -3,
                  "width": "calc(100% - 16px)",
                }
              }
            >
              <div
                className="box selected"
                style={
                  Object {
                    "borderRadius": 1.5,
                    "height": 3,
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
  <div
    className="FlexItem"
  >
    <div
      className="box paddingY3"
    >
      <a
        className="link noUnderline hideOutline tapTransition rounding2 accessibilityOutline block fullWidth pointer"
        href="#"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        rel=""
        tabIndex={0}
        target={null}
      >
        <div
          className="Flex columnGap0 itemsCenter xsDirectionColumn"
        >
          <div
            className="box default paddingX2 paddingY2 relative rounding2 userSelectNone"
          >
            <div
              className="Flex rowGap2 itemsCenter justifyCenter xsDirectionRow"
            >
              <div
                className="FlexItem"
              >
                <div
                  className="Text fontSize300 defaultText alignStart noWrap fontWeightSemiBold"
                >
                  You
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;
